<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.app.activitys.SignupActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150dp"
        android:foreground="@color/profile_back"
        android:scaleType="fitXY"
        android:src="@drawable/background_mainactivityimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/register_to_continue_with_n_wedding"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_background" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_marginTop="-25dp"
        android:background="@drawable/background_cov"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profile_icon"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_100dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_19dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_profile_icon"
                app:shapeAppearance="@style/Profile" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_59dp"
                android:layout_marginEnd="@dimen/_15dp"
                app:boxStrokeColor="@color/box_storak_profile"
                app:hintTextColor="@color/hint_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/_17sp"
                    android:textColor="@color/name_text"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_25dp"
                android:layout_marginEnd="@dimen/_15dp"
                app:boxStrokeColor="@color/box_storak_profile"
                app:hintTextColor="@color/hint_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/name_text"
                    android:textSize="@dimen/_17sp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_25dp"
                android:layout_marginEnd="@dimen/_15dp"
                app:boxStrokeColor="@color/box_storak_profile"
                app:hintTextColor="@color/hint_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/name_text"
                    android:textSize="@dimen/_17sp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_25dp"
                android:layout_marginEnd="@dimen/_15dp"
                app:boxStrokeColor="@color/box_storak_profile"
                app:hintTextColor="@color/hint_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:textColor="@color/name_text"
                    android:textSize="@dimen/_17sp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_25dp"
                android:layout_marginEnd="@dimen/_15dp"
                app:boxStrokeColor="@color/box_storak_profile"
                app:hintTextColor="@color/hint_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawableRight="@drawable/ic_calendar"
                    android:focusable="false"
                    android:textColor="@color/name_text"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/birthdate"
                    android:inputType="date"
                    android:textSize="@dimen/_17sp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_25dp"
                android:layout_marginEnd="@dimen/_15dp"
                app:boxStrokeColor="@color/box_storak_profile"
                app:hintTextColor="@color/hint_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/city"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/_17sp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_42dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:layout_marginEnd="@dimen/_45dp"
                    android:layout_marginBottom="@dimen/_16dp"
                    android:background="@drawable/ic_delete"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/register_for_now"
                    android:textAllCaps="false"
                    android:textColor="@color/name_text"
                    android:textSize="@dimen/_16sp"
                    app:backgroundTint="@color/message_text" />


            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="already account?"
                    android:textColor="@color/name_text"
                    android:textStyle="bold" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_in"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in" />


            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_login_text"
        app:srcCompat="@drawable/ic_home_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>